--- a/style.css
+++ b/style.css
@@ -34,18 +34,22 @@ h1
 {
     background-color: rgb(80, 80, 80);
     width: 40%;
-    height: 80%;
+    display:flex;
+    flex-direction: column;
+    position: relative;
     margin: 2.5%;
     border-radius: 10px;
     overflow:hidden;
     border-top: 1px solid rgba(255, 255, 255, 0.6);
     border-left: 1px solid rgba(255, 255, 255, 0.6);
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
 }
 
 .taskListContent
 {
     overflow: auto;
-    height: 90%;
+    flex: 1;
+    box-shadow: inset 0 -10px 20px -2px rgba(0, 0, 0, 0.5);
 }
 
 .taskListContent::-webkit-scrollbar {
@@ -76,6 +80,7 @@ h1
     overflow: hidden;
     border-top: 1px solid rgba(255, 255, 255, 0.6);
     border-left: 1px solid rgba(255, 255, 255, 0.6);
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
 }
 
 .taskContentContainer
@@ -101,6 +106,11 @@ ul
 li > p
 {
     margin: 5px 0;
+}
+
+li > h2
+{
+    color: rgb(143, 203, 197);
 }
 
 li
@@ -154,20 +164,25 @@ li:hover
 
 .addTask 
 {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-image: url('addNote.png');
     background-size: contain;     /* albo 'cover', zależnie od preferencji */
     background-repeat: no-repeat;
     background-position: center;
     border: none;
     cursor: pointer;
-    background-color: transparent;
-    padding: 0;
-    float: right;
-    margin-right: 10px;
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
+    padding: 0px;
+    z-index: 5;
     transition: 0.2s ease;
-    filter: invert(1);
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
+    border-top: 1px solid rgba(255,255,255,0.4);
+    border-left: 1px solid rgba(255,255,255,0.4);
+    box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
 .addTask:hover {
@@ -234,7 +249,7 @@ li:hover
     border-radius: 20px;
     z-index: 11;
     padding: 30px 10px;
-    box-shadow: 5px 5px 10px 0px rgba(66, 68, 90, 0.3);
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
@@ -284,6 +299,8 @@ li:hover
     border-radius: 10px;
     margin: 5px 1% 10px 4.5%;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.2s ease;
 }
 
 .descriptionInput {
@@ -293,6 +310,8 @@ li:hover
     margin: 5px 4.5% 10px 4.5%;
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.2s ease;
 }
 
 .cancelButton
@@ -301,7 +320,7 @@ li:hover
     width: 35px;
     border-radius: 10px;
     transition: 0.2s ease;
-    box-shadow: 2px 2px 5px 0px rgba(66, 68, 90, 0.8);
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.8);
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color: rgba(255, 255, 255, 0.2);
     color: whitesmoke;
@@ -315,6 +334,8 @@ li:hover
     flex: 2;
     padding: 0 10px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.2s ease;
 }
 
 .timeInput
@@ -324,6 +345,8 @@ li:hover
     flex: 1;
     padding: 0 10px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.2s ease;
 }
 
 .priorityInput
@@ -334,6 +357,14 @@ li:hover
     flex: 1;
     padding: 0 10px;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: 0.2s ease;
+}
+
+.titleInput:focus, .descriptionInput:focus, .dateInput:focus, .timeInput:focus, .priorityInput:focus {
+    outline: none;
+    border: 1px solid rgb(143, 203, 197);
+    box-shadow: 2px 2px 5px rgba(143, 203, 197, 0.6);
 }
 
 .submitButton
@@ -345,7 +376,7 @@ li:hover
     color: whitesmoke;
     margin: 10% 30%;
     transition: 0.2s ease;
-    box-shadow: 2px 2px 5px 0px rgba(66, 68, 90, 0.8);
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.8);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
@@ -355,15 +386,18 @@ li:hover
     cursor: default;
     transform: none;
     box-shadow: none;
+    border: none;
+    color: black;
 }
 
 .submitButton:hover, .cancelButton:hover
 {
     background-color: rgba(255, 255, 255, 0.4);
-    color: black;
+    color: rgb(143, 203, 197);
     cursor: pointer;
     transform: translateY(-2px);
-    box-shadow: 4px 4px 8px 0px rgba(66, 68, 90, 0.5);
+    box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(143, 203, 197, 1);
 }
 
 .taskCreationDivAdded
@@ -376,16 +410,16 @@ li:hover
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
     filter: blur(0);
-    box-shadow: 5px 5px 10px rgba(66, 68, 90, 0.8);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
   }
   30% {
     transform: translate(-50%, -50%) scale(1.08);
-    box-shadow: 8px 8px 15px rgba(66, 68, 90, 0.6);
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.6);
   }
   /* przez pierwsze 75% czasu prawie stoi w miejscu */
   70% {
     transform: translate(-50%, -50%) scale(1.1);
-    box-shadow: 8px 8px 15px rgba(66, 68, 90, 0.6);
+    box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.6);
   }
   /* od 75% do 100% – szybki „wystrzał” w prawo */
   100% {
