--- a/style.css
+++ b/style.css
@@ -6,6 +6,41 @@ body
     color: whitesmoke;
 }
 
+.scaleAnimationIn
+{
+    animation: scaleViewIn 0.4s ease-out forwards;
+}
+
+@keyframes scaleViewIn
+{
+    0%
+    {
+        transform: scale(1);
+    }
+    100%
+    {
+        transform: scale(0.9);
+    }
+}
+
+.scaleAnimationOut
+{
+    transform: scale(0.9);
+    animation: ScaleViewOut 0.4s ease-in forwards;
+}
+
+@keyframes ScaleViewOut
+{
+    0%
+    {
+        transform: scale(0.9);
+    }
+    100%
+    {
+        transform: scale(1);
+    }
+}
+
 .container
 {
     width: 95%;
@@ -23,6 +58,7 @@ h1
 {
     text-align: center;
     color: aliceblue;
+    background-color: transparent;
     width: 100%;
     height: 5%;
     font-size: 40px;
@@ -43,6 +79,7 @@ h1
     border-top: 1px solid rgba(255, 255, 255, 0.6);
     border-left: 1px solid rgba(255, 255, 255, 0.6);
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
+    z-index: 2;
 }
 
 .taskListContent
@@ -52,17 +89,17 @@ h1
     box-shadow: inset 0 -10px 20px -2px rgba(0, 0, 0, 0.5);
 }
 
-.taskListContent::-webkit-scrollbar {
+.taskListContent::-webkit-scrollbar{
     width: 8px;
 }
 
-.taskListContent::-webkit-scrollbar-track {
+.taskListContent::-webkit-scrollbar-track{
     background: transparent;
     border-radius: 10px;
     margin-block: 8px; /* padding top/bottom */
 }
 
-.taskListContent::-webkit-scrollbar-thumb {
+.taskListContent::-webkit-scrollbar-thumb{
     background-color: rgba(0, 0, 0, 0.2); /* delikatny ciemny */
     border-radius: 10px;
     border: 2px solid transparent;
@@ -73,19 +110,33 @@ h1
 .taskContent
 {
     background-color: rgb(80, 80, 80);
-    height: 70%;
+    height: fit-content;
+    max-height: 90%;
     width: 50%;
     margin: 2.5%;
     border-radius: 15px;
-    overflow: hidden;
+    overflow: auto;
     border-top: 1px solid rgba(255, 255, 255, 0.6);
     border-left: 1px solid rgba(255, 255, 255, 0.6);
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
+    transition: 0.5s  ease-out;
+    font-size: 20px;
+    z-index: 1;
+}
+
+.datesContainer
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 15px;
+    color: rgba(245, 245, 245, 0.8);
+    margin-top: 50px;
 }
 
 .taskContentContainer
 {
-    padding: 15px;
+    padding: 20px 25px;
 }
 
 h3
@@ -93,9 +144,49 @@ h3
     text-align: center;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.2);
+    font-size: 25px;
     margin: 0;
-    height: 5%;
-    line-height: 40px;
+    height: 50px;
+    line-height: 50px;
+}
+
+.deleteTask, .minimizeTask
+{
+    width: 30px;
+    height: 30px;
+    float: right;
+    margin: 10px 15px 0 0;
+    border-radius: 8px;
+    transition: 0.3s ease-out;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.7);
+}
+
+.deleteTask:hover
+{
+    background-color: rgba(255, 50, 50, 0.7);
+    box-shadow: 0px 0px 12px rgba(255, 0, 0, 0.4);
+    transform: translateY(-2px);
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.minimizeTask:hover
+{
+    background-color: rgba(255, 255, 0, 0.7);
+    box-shadow: 0px 0px 12px rgba(255, 255, 0, 0.4);
+    transform: translateY(-2px);
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.minimizeTask
+{
+    width: 30px;
+    height: 30px;
+    float: right;
+    margin: 10px 15px 0 0;
+    border-radius: 7px;
 }
 
 ul
@@ -121,10 +212,11 @@ li
     padding: 2.5%;
     border: 1px solid transparent;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     transition: 0.3s ease;
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(5px);
 }
 
 li:hover
@@ -167,7 +259,7 @@ li:hover
     display: none;
     background-color: transparent;
     border: transparent;
-    transition: 0.5s ease;
+    transition: 0.5s ease-out;
 }
 
 .priorityContainer:hover
@@ -183,31 +275,40 @@ li:hover
 #liPriorityHigh
 {
     background: linear-gradient(90deg,rgba(255, 255, 255, 0) 0%, rgba(255, 0, 0, 0.02) 50%, rgba(255, 0, 0, 0.04) 100%);
+    border: 1px solid transparent;
 }
 
 #liPriorityMedium
 {
     background: linear-gradient(90deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 0, 0.02) 50%, rgba(255, 255, 0, 0.04) 100%);
+    border: 1px solid transparent;
 }
 
 #liPriorityLow
 {
     background: linear-gradient(90deg,rgba(255, 255, 255, 0) 0%, rgba(0, 255, 0, 0.02) 50%, rgba(0, 255, 0, 0.04) 100%);
+    border: 1px solid transparent;
 }
 
 #liPriorityHigh:hover
 {
     background: linear-gradient(90deg,rgba(255, 0, 0, 0.02) 0%, rgba(255, 0, 0, 0.04) 50%, rgba(255, 0, 0, 0.06) 100%);
+    border-top: 1px solid rgba(255, 255, 255, 0.4);
+    border-left: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 #liPriorityMedium:hover
 {
     background: linear-gradient(90deg,rgba(255, 255, 0, 0.02) 0%, rgba(255, 255, 0, 0.04) 50%, rgba(255, 255, 0, 0.06) 100%);
+    border-top: 1px solid rgba(255, 255, 255, 0.4);
+    border-left: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 #liPriorityLow:hover
 {
     background: linear-gradient(90deg,rgba(0, 255, 0, 0.02) 0%, rgba(0, 255, 0, 0.04) 50%, rgba(0, 255, 0, 0.06) 100%);
+    border-top: 1px solid rgba(255, 255, 255, 0.4);
+    border-left: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .addTask 
@@ -254,7 +355,7 @@ li:hover
 {
     background-color: rgba(0, 0, 0, 0); /* początkowo przezroczyste */
     backdrop-filter: blur(0px);         /* brak rozmycia na start */
-    animation: fadeInBlur 1s ease forwards;
+    animation: fadeInBlur 0.5s ease-out forwards;
 }
 
 @keyframes fadeInBlur {
@@ -264,14 +365,14 @@ li:hover
     }
     100% {
         background-color: rgba(0, 0, 0, 0.6);
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(12px);
     }
 }
 
 @keyframes fadeOutBlur {
     0% {
         background-color: rgba(0, 0, 0, 0.6);
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(12px);
     }
     100% {
         background-color: rgba(0, 0, 0, 0);
@@ -283,7 +384,7 @@ li:hover
 {
     background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(10px);   
-    animation: fadeOutBlur 1s ease forwards;
+    animation: fadeOutBlur 0.6s ease-in forwards;
 }
 
 .taskCreatorDiv {
@@ -305,21 +406,21 @@ li:hover
 {
     opacity: 0;
     transform: translate(-50%, -60%) scale(0.95);
-    animation: popupAnimation 0.5s ease forwards;
-    animation-delay: 0.5s;
+    animation: popupAnimation 0.4s ease-out forwards;
+    animation-delay: 0.1s;
 }
 
 .taskCreatorDivOut
 {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
-    animation: popoutAnimation 0.5s ease forwards;
+    animation: popoutAnimation 0.4s ease-in forwards;
 }
 
 @keyframes popupAnimation {
     0% {
         opacity: 0;
-        transform: translate(-50%, -60%) scale(0.95);
+        transform: translate(-50%, -60%) scale(0.75);
     }
     100% {
         opacity: 1;
@@ -334,7 +435,7 @@ li:hover
     }
     100% {
         opacity: 0;
-        transform: translate(-50%, -60%) scale(0.95);
+        transform: translate(-50%, -60%) scale(0.75);
 
     }
 }
@@ -450,7 +551,7 @@ li:hover
 
 .taskCreationDivAdded
 {
-    animation: flyOutRight 0.7s ease-in forwards;
+    animation: flyOutRight 0.5s ease-out forwards;
 }
 
 @keyframes flyOutRight {
@@ -460,12 +561,12 @@ li:hover
     filter: blur(0);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
   }
-  30% {
+  10% {
     transform: translate(-50%, -50%) scale(1.08);
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.6);
   }
   /* przez pierwsze 75% czasu prawie stoi w miejscu */
-  70% {
+  50% {
     transform: translate(-50%, -50%) scale(1.1);
     box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.6);
   }
@@ -476,3 +577,77 @@ li:hover
     box-shadow: none;
   }
 }
+
+.taskDetailAnimationOut
+{
+    animation: TaskDetailOut 0.6s ease-in forwards;
+    opacity: 1;
+}
+
+@keyframes TaskDetailOut
+{
+    0%
+    {
+        transform: translate(0, 0) scaleY(1);
+        opacity: 1;
+    }
+    10%
+    {
+        transform: translate(0, 0) scaleY(1.1);
+    }
+    15%
+    {
+        transform: translate(0, 0) scaleY(1.15);
+    }
+    40%
+    {
+        transform: translate(0, 0) scaleY(0.4);
+    }
+    50%
+    {
+        transform: translate(10%, 0) scaleY(0.4);
+    }
+    100%
+    {
+        transform: translate(-100%, 0) scaleY(0.4) scaleX(0.3);
+    }
+}
+
+.taskDetailAnimationIn
+{
+    opacity: 1;
+    animation: TaskDetailIn 0.6s ease-out;
+}
+
+@keyframes TaskDetailIn
+{
+    0%
+    {
+        transform: translate(-100%, 0) scaleY(0.4) scaleX(0.3);
+        opacity: 0;
+    }
+    50%
+    {
+        transform: translate(0, 0) scaleY(0.4) scaleX(1);
+    }
+    60%
+    {
+        transform: translate(0, 0) scaleY(0.4);
+    }
+    80%
+    {
+        transform: translate(0, 0) scaleY(1.1);
+        opacity: 1;
+    }
+    85%
+    {
+        transform: translate(0, 0) scaleY(1.15);
+        opacity: 1;
+    }
+    100%
+    {
+        transform: translate(0, 0) scaleY(1);
+        opacity: 1;
+    }
+}
+
