--- a/style.css
+++ b/style.css
@@ -651,3 +651,27 @@ li:hover
     }
 }
 
+@keyframes collapsePriority {
+  0% {
+    opacity: 1;
+    transform: scaleY(1);
+    height: auto;
+  }
+  20%
+  {
+    opacity: 1;
+    transform: scaleY(1.15);
+    height: auto;
+  }
+  100% {
+    opacity: 0;
+    transform: scaleY(0);
+    height: 0;
+    margin: 0;
+  }
+}
+
+.collapsePriority {
+  animation: collapsePriority 0.4s ease-in forwards;
+  transform-origin: top;
+}
